--- a/Admin.html
+++ b/Admin.html
@@ -7,23 +7,9 @@
     <link rel="stylesheet" href="admin.css">
     <title>Admin Dashboard</title>
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-auth.js";
-        import { getFirestore, collection, getDocs, setDoc, doc, getDoc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCWIR8ZzkXR9bK6LiO4QSQRuqbPLHgrAxQ",
-            authDomain: "student-8d36e.firebaseapp.com",
-            projectId: "student-8d36e",
-            storageBucket: "student-8d36e.appspot.com",
-            messagingSenderId: "693544198236",
-            appId: "1:693544198236:web:60dac4a00533790c9c4699"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
-
+        import { app, auth, db } from "./firebase-config.js"; 
+        import {  createUserWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-auth.js";
+        import { collection, getDocs, setDoc, doc, getDoc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore.js";
         function updateNavbar(user) {
             const navButtons = document.getElementById("nav-buttons");
             if (!navButtons) return;
